--- a/media/css/main.css
+++ b/media/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'ExpresswayRegular';
-	src: url('http://media.agoodcloud.com/fonts/expressway_rg-webfont.eot?') format('eot'), url('http://media.agoodcloud.com/fonts/expressway_rg-webfont.woff') format('woff'), url('http://media.agoodcloud.com/fonts/expressway_rg-webfont.ttf') format('truetype'), url('http://media.agoodcloud.com/fonts/expressway_rg-webfont.svg#webfont') format('svg');
+	src: url('../fonts/expressway_rg-webfont.eot?') format('eot'), url('../fonts/expressway_rg-webfont.woff') format('woff'), url('../fonts/expressway_rg-webfont.ttf') format('truetype'), url('../fonts/expressway_rg-webfont.svg#webfont') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
