--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -25,8 +25,8 @@
   <script src="{{MEDIA_URL}}js/libs/modernizr-1.6.min.js"></script>
 {% block javascript %}
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
+  <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}/js/contrib/jquery-ui.js"> </script>
   {% slimall %}
-  <script type="text/javascript" charset="utf-8" src="/js/contrib/jquery-ui.js"> </script>
   <script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.django.csrf.js"> </script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="/js/contrib/jquery.js"%3E%3C/script%3E'))</script>
   <script src="/js/plugins.js"></script>
@@ -44,11 +44,9 @@
 	{% block content %}
 
 	{% endblock %}
-	
-
-{% if ENV != "DEV" and not user.is_staff %}{% analytics %}
-{% include "owa/_analytics.html" %}
-{% endif %}
+{# {% if ENV != "DEV" and not user.is_staff %}{% analytics %} #}
+{# {% include "owa/_analytics.html" %} #}
+{# {% endif %} #}
 </body>
 {% endblock %}
 </html>
