switched pretty much everything over to django-static that's meaningful, got tests running in a less hacky way (we'll see what jenkins thinks!)

--- a/mycelium/apps/generic_tags/templates/generic_tags/_js.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_js.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/mycelium/generic_tags.js"> </script>
+{% load django_static %}{% slimall %}<script type="text/javascript" charset="utf-8" src="/js/mycelium/generic_tags.js"> </script>{% endslimall %}
