--- a/mycelium/apps/mycelium_core/templates/mycelium_core/template_tags/generic_fields/css.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/template_tags/generic_fields/css.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="{{ MEDIA_URL }}css/generic_fields.css" type="text/css" media="screen" title="" charset="utf-8">
+{% load django_static %}{% slimall %}<link rel="stylesheet" href="/css/generic_fields.css" type="text/css" media="screen" title="" charset="utf-8">{% endslimall %}
