--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -1,13 +1,15 @@
 {% extends "people/base.html" %}
-{% load i18n generic_fields friendly_data_formatting generic_tag_tags %}
+{% load i18n generic_fields friendly_data_formatting generic_tag_tags django_static %}
 {% block title %}Organizations - {% if org.name %}{{org.name}}{% else %}New Organization{% endif %}{% endblock %}
 {% block css %}{{block.super}}
 {% generic_field_css %}
- <link rel="stylesheet" href="{{ MEDIA_URL }}css/people_organizations.css" type="text/css" media="screen" title="" charset="utf-8">
-{% endblock %}
-{% block javascript %}{{block.super}}
-<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/mycelium/people_common.js"> </script>
-<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/mycelium/people_organization.js"> </script>
+{% slimall %}
+ <link rel="stylesheet" href="/css/people_organizations.css" type="text/css" media="screen" title="" charset="utf-8">
+{% endslimall %}{% endblock %}
+{% block javascript %}{{block.super}}{% slimall %}
+<script type="text/javascript" charset="utf-8" src="/js/mycelium/people_common.js"> </script>
+<script type="text/javascript" charset="utf-8" src="/js/mycelium/people_organization.js"> </script>
+{% endslimall %}
 {% generic_tags_js %}
 {% if request.GET.edit == "ON" or form.instance.full_name == "No Name" %}
 <script type="text/javascript" charset="utf-8">
