--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" href="/css/ie7_marketing_site.css" type="text/css" media="screen" title="" charset="utf-8">
 <![endif]-->
 {% endblock %}
-<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}/js/contrib/jquery.scrollTo-min.js"> </script>
 {% block javascript %}{{block.super}}{% slimall %}
+<script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.scrollTo-min.js"> </script>
 <script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.toggleval.js"> </script>
 <script type="text/javascript" charset="utf-8" src="/js/mycelium/marketing_site.js"> </script>
 {% endslimall %}{% endblock %}
