--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -1,11 +1,12 @@
-{% extends "people/base.html" %}
+{% extends "people/base.html" %}{% load django_static %}
 {% block title %}People - Search{% endblock %}
 {% block breadcrumb %}{% endblock %}
 {% block javascript %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
 	var SEARCH_URL = "{% url people:search_results %}";
 </script>
-<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/mycelium/people_search.js"> </script>
+{% slimall %}<script type="text/javascript" charset="utf-8" src="/js/mycelium/people_search.js"> </script>
+{% endslimall %}
 {% endblock %}
 {% block page_content %}
 <div class="main_search_box">
