--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -22,11 +22,11 @@
   {# <!--	Uncomment if you are specifically targeting less enabled mobile browsers   --> #}
   {# <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2"> #}
   {% block css %}{% endblock %}
-  <script src="{{MEDIA_URL}}js/libs/modernizr-1.6.min.js"></script>
+  <script src="{% slimfile "/js/libs/modernizr-1.6.min.js"%}" ></script>
 {% block javascript %}
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
-  <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}/js/contrib/jquery-ui.js"> </script>
   {% slimall %}
+  <script type="text/javascript" charset="utf-8" src="/js/contrib/jquery-ui.js"> </script>
   <script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.django.csrf.js"> </script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="/js/contrib/jquery.js"%3E%3C/script%3E'))</script>
   <script src="/js/plugins.js"></script>
