at least it's centered

--- a/mycelium/templates/502.html
+++ b/mycelium/templates/502.html
@@ -16,7 +16,9 @@
 	<h1>We'll be right back!</h1>
 
 	<div class="detail_text">
-	We're upgrading GoodCloud right now.  Be back in a jiffy!
+	<h1>We're upgrading GoodCloud right now.
+	<br/>  Be back in a jiffy!</h1>
+	
 	</div>
 	</div>
 	</div>
