re-enabling analytics

--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -43,9 +43,9 @@
 	{% block content %}
 
 	{% endblock %}
-{# {% if ENV != "DEV" and not user.is_staff %}{% analytics %} #}
+ {% if ENV != "DEV" and not user.is_staff %}{% analytics %} 
 {# {% include "owa/_analytics.html" %} #}
-{# {% endif %} #}
+  {% endif %} 
 </body>
 {% endblock %}
 </html>
