--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -46,4 +46,5 @@
 	{% endblock %}
 	</footer>
 	{% endblock %}
+	<script type="text/javascript"> var uservoiceOptions = {   /* required */   key: 'goodcloud',   host: 'goodcloud.uservoice.com',    forum: '107765',   showTab: true,     /* optional */   alignment: 'left',   background_color:'#004486',    text_color: 'white',   hover_color: '#06C',   lang: 'en' };  function _loadUserVoice() {   var s = document.createElement('script');   s.setAttribute('type', 'text/javascript');   s.setAttribute('src', ("https:" == document.location.protocol ? "https://" : "http://") + "cdn.uservoice.com/javascripts/widgets/tab.js");   document.getElementsByTagName('head')[0].appendChild(s); } _loadSuper = window.onload; window.onload = (typeof window.onload != 'function') ? _loadUserVoice : function() { _loadSuper(); _loadUserVoice(); }; </script>
 {% endblock %}
