refactoring of tags, most of the code-side implementation for skills/roles - front end unfinished and untested.

--- a/mycelium/apps/donors/templates/donors/_people_donor_tab.html
+++ b/mycelium/apps/donors/templates/donors/_people_donor_tab.html
@@ -70,7 +70,7 @@
 <div class="tags_and_other_info">
 	<div class="detail_header">Donor Categories</div>
 	<div class="section_details">
-	{% render_tags_and_add_tag donor "donors" "donor" %}
+	{% render_tags_and_add_tag donor tag_view_obj %}
 	</div>
 </div>
 </td>
