--- a/mycelium/apps/generic_tags/templates/generic_tags/_tags_as_checklist.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_tags_as_checklist.html
@@ -1,11 +1,11 @@
 <tags>
 <fragment name="{{namespace_name}}_tags" action="replace">
-	{% include "generic_tags/_tag_list.html" %}
+	{% include "generic_tags/_tag_checklist.html" %}
 </fragment>
 <form action="{{add_tag_url}}" method="POST" id="new_{{namespace_name}}_tag_form" class="new_tag_form" >{% csrf_token %}
 <tag class="new_tag">
 	<input type="hidden" name="target_pk" value="{{obj.pk}}">
-	<input type="text" name="new_tag" value="" placeholder="Type a new tag" maxlength="100" autocomplete="off" results_url="{{search_results_url}}">
+	<input type="text" name="new_tag" value="" placeholder="Type a new tag" maxlength="100" autocomplete="off" results="0" results_url="{{search_results_url}}">
 	<input type="submit" class="mycelium_btn mycelium_small_btn tag_add_btn" value="Add">
 </tag>
 <search_results>
