--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -62,7 +62,7 @@ $(function(){
 </div>
 	
 <div class="general_organization_tags">
-	{% render_tags_and_add_tag org "people" "organization" %}
+	{% render_tags_and_add_tag org tag_view_obj %}
 </div>
 
 	
