--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -93,7 +93,7 @@ $(function(){
 </div>
 
 <div class="general_person_tags">
-{% render_tags_and_add_tag person "people" "person"  %}
+{% render_tags_and_add_tag person tag_view_obj %}
 </div>
 
 <detail_tabs update_url="{% url people:tab_contents person.pk %}">
