s3 backend for file uploads

--- a/mycelium/apps/logo_maker/templates/logo_maker/list.html
+++ b/mycelium/apps/logo_maker/templates/logo_maker/list.html
@@ -38,7 +38,7 @@ function cancel_another_logo_btn_clicked() {
 </form>
 
 <section_title>{{l.name}}</section_title>
-<img src="{{MEDIA_URL}}{{t}}" class="logo_thumb"/>
+<img src="{{CDN_MEDIA_URL}}{{t}}" class="logo_thumb"/>
 {% endthumbnail %}
 </logo_info>
 
