--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -42,7 +42,7 @@
 	
 	<footer>
 	{% block footer %}
-	<a href="http://www.agoodcloud.com">Powered by <img src="{{MEDIA_URL}}images/goodcloud-logo-24.png">GoodCloud</a>
+	<a href="https://www.agoodcloud.com">Powered by <img src="{{MEDIA_URL}}images/goodcloud-logo-24.png">GoodCloud</a>
 	{% endblock %}
 	</footer>
 	{% endblock %}
