--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -548,3 +548,22 @@ table.two_column_70_30 {
 .two_column_70_30 .column_2 {
 	width: 30%
 }
+tag.checkbox, tag.new_checkbox_tag {
+	display: block;
+	background: transparent;
+	color: #454545;
+	padding: 0px;
+	/*padding: 2px 0px 5px 15px;*/
+	width: 100%;
+	margin: 2px 0px;
+}
+tag.checkbox label {
+	float: none;
+	display: inline;
+}
+tag.checkbox .checkbox_input {
+	margin: 0px 4px 2px 0px;
+}
+tags.checkboxes {
+	padding: 0px 0px 0px 16px;
+}
