--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -1,4 +1,4 @@
-{% extends "people/base.html" %}{% load django_static %}
+{% extends "people/base.html" %}
 {% block title %}People - Search{% endblock %}
 {% block breadcrumb %}{% endblock %}
 {% block javascript %}{{block.super}}
