--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% load django_static %}
+{% extends "base.html" %}
 {% block css %}{{block.super}}{% slimall %}
 <link rel="stylesheet" href="/css/mycelium_elements.css" type="text/css" media="screen" title="" charset="utf-8">
 <link rel="stylesheet" href="/css/contrib/jquery-ui-1.8.10.custom.css" type="text/css" media="screen" title="" charset="utf-8">
