--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -1,5 +1,5 @@
 {% extends "people/base.html" %}
-{% load i18n generic_fields friendly_data_formatting generic_tag_tags django_static %}
+{% load i18n generic_fields friendly_data_formatting generic_tag_tags %}
 {% block title %}Organizations - {% if org.name %}{{org.name}}{% else %}New Organization{% endif %}{% endblock %}
 {% block css %}{{block.super}}
 {% generic_field_css %}
