--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -1,5 +1,5 @@
 {% extends "people/base.html" %}
-{% load i18n generic_fields friendly_data_formatting generic_tag_tags django_static %}
+{% load i18n generic_fields friendly_data_formatting generic_tag_tags %}
 {% block title %}People - {{person.full_name}}{% endblock %}
 {% block css %}{{block.super}}
 {% generic_field_css %}
