--- a/mycelium/apps/generic_tags/templates/generic_tags/_tags_as_checklist.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_tags_as_checklist.html
@@ -1,4 +1,4 @@
-<tags class="checkboxes edit_mode_on">
+<tags class="checkboxes">
 <fragment name="{{namespace_name}}_tags" action="replace">
 	{% include "generic_tags/_tag_checklist.html" %}
 </fragment>
@@ -6,7 +6,7 @@
 <tag class="new_checkbox_tag">
 	<input type="hidden" name="target_pk" value="{{obj.pk}}">
 	<input type="checkbox" class="checkbox_input" id="{{namespace_name}}_new" />
-	<input type="text" name="new_tag" value="" placeholder="Type a new skill/role" maxlength="100" autocomplete="off" results="0" results_url="{{search_results_url}}">
+	<input type="text" name="new_tag" value="" placeholder="Type a new skill/role" maxlength="100" autocomplete="off" results="0" results_url="{{search_results_url}}" class="new_tag_name_input">
 	<input type="submit" class="mycelium_btn mycelium_small_btn tag_add_btn" value="Add">
 </tag>
 <search_results>
