mediastatic is working

--- a/mycelium/apps/mycelium_core/templates/mycelium_core/template_tags/generic_fields/css.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/template_tags/generic_fields/css.html
@@ -1,1 +1,1 @@
-{% slimall %}<link rel="stylesheet" href="/css/generic_fields.css" type="text/css" media="screen" title="" charset="utf-8">{% endslimall %}
+{% css "/css/generic_fields.css" %}
