--- a/mycelium/apps/generic_tags/templates/generic_tags/_js.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_js.html
@@ -1,1 +1,1 @@
-{% slimall %}<script type="text/javascript" charset="utf-8" src="/js/mycelium/generic_tags.js"> </script>{% endslimall %}
+{% js "/js/mycelium/generic_tags.js %}
