--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -3,16 +3,14 @@
 {% block title %}People - {{person.full_name}}{% endblock %}
 {% block css %}{{block.super}}
 {% generic_field_css %}
-{% slimall %}
-<link rel="stylesheet" href="/css/people_volunteer.css" type="text/css" media="screen" title="" charset="utf-8">
-<link rel="stylesheet" href="/css/people_donor.css" type="text/css" media="screen" title="" charset="utf-8">
-{% endslimall %}{% endblock %}
-{% block javascript %}{{block.super}}{% slimall %}
-<script type="text/javascript" charset="utf-8" src="/js/mycelium/people_common.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/mycelium/people_person.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/mycelium/people_volunteer.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/mycelium/people_donations.js"> </script>
-{% endslimall %}
+{% css "/css/people_volunteer.css" %}
+{% css "/css/people_donor.css" %}
+{% endblock %}
+{% block javascript %}{{block.super}}
+{% js "/js/mycelium/people_common.js" %}
+{% js "/js/mycelium/people_person.js" %}
+{% js "/js/mycelium/people_volunteer.js" %}
+{% js "/js/mycelium/people_donations.js" %}
 {% generic_tags_js %}
 {% if request.GET.edit == "ON" or form.instance.full_name == "No Name"  %}
 <script type="text/javascript" charset="utf-8">
