--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -5,8 +5,7 @@
 <script type="text/javascript" charset="utf-8">
 	var SEARCH_URL = "{% url people:search_results %}";
 </script>
-{% slimall %}<script type="text/javascript" charset="utf-8" src="/js/mycelium/people_search.js"> </script>
-{% endslimall %}
+{% js "/js/mycelium/people_search.js" %}
 {% endblock %}
 {% block page_content %}
 <div class="main_search_box">
