--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
-{% block css %}{{block.super}}{% slimall %}
-<link rel="stylesheet" href="/css/mycelium_elements.css" type="text/css" media="screen" title="" charset="utf-8">
-<link rel="stylesheet" href="/css/contrib/jquery-ui-1.8.10.custom.css" type="text/css" media="screen" title="" charset="utf-8">
-{% endslimall %}{% endblock %}
-{% block javascript %}{{block.super}}{% slimall %}
-<script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.scrollTo-min.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.toggleval.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.hotkeys-0.7.9.min.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.ajax.queue.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.autogrow.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.form.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.ba-bbq.min.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/mycelium/mycelium_elements.js"> </script>
-<script type="text/javascript" charset="utf-8" src="/js/mycelium/mycelium_search.js"> </script>
-{% endslimall %}{% endblock %}
+{% block css %}{{block.super}}
+{% css "/css/mycelium_elements.css" %}
+{% css "/css/contrib/jquery-ui-1.8.10.custom.css" %}
+{% endblock %}
+{% block javascript %}{{block.super}}
+{% js "/js/contrib/jquery.scrollTo-min.js" %}
+{% js "/js/contrib/jquery.toggleval.js" %}
+{% js "/js/contrib/jquery.hotkeys-0.7.9.min.js" %}
+{% js "/js/contrib/jquery.ajax.queue.js" %}
+{% js "/js/contrib/jquery.autogrow.js" %}
+{% js "/js/contrib/jquery.form.js" %}
+{% js "/js/contrib/jquery.ba-bbq.min.js" %}
+{% js "/js/mycelium/mycelium_elements.js" %}
+{% js "/js/mycelium/mycelium_search.js" %}
+{% endblock %}
 {% block content %}
 	<span id="test_badge"></span>
 	{% block nav %}
