--- a/mycelium/templates/404.html
+++ b/mycelium/templates/404.html
@@ -3,16 +3,14 @@
 <html lang="en">
 <head>
 	<title>{% trans "404 Error - That page doesn't exist!"%}</title>
-	{% slimall %}
-	<link rel="stylesheet" href="/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
-	<link rel="stylesheet" href="/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8">
-	{% endslimall %}
+	{% css "/css/main.css" %}
+	{% css "/css/error_pages.css" %}
 </head>
 <body>
 	
 	<div id="error_message">
 	<div class="adorable_image">
-	<img src="{% staticfile "images/icon-raincloud-400.png" %} />
+	<img src="{% media_url "images/icon-raincloud-400.png" %} />
 	</div>
 	<div class="detail_box">
 	<h1>Oh Dear.  Looks like we don't have that page.</h1>
