switched the rest of the MEDIA_URLS

--- a/mycelium/apps/import/templates/import/base.html
+++ b/mycelium/apps/import/templates/import/base.html
@@ -1,4 +1,4 @@
 {% extends "mycelium_base.html" %}
 {% block css %}{{block.super}}
-	<link rel="stylesheet" href="{{ MEDIA_URL }}css/import.css" type="text/css" media="screen" title="" charset="utf-8">
+	{% css "css/import.css" %}
 {% endblock %}
