--- a/mycelium/apps/reports/templates/reports/new.html
+++ b/mycelium/apps/reports/templates/reports/new.html
@@ -7,7 +7,7 @@
 <div class="right_actions">
 	<a href="#" class="mycelium_btn">Save Report</a>
 </div>
-<div class="title"><img src="{{MEDIA_URL}}images/report-32.png"/>Unsaved Report</div>
+<div class="title"><img src="{% media_url "images/report-32.png" %}/>Unsaved Report</div>
 
 <div class="setup_phrase">Find all of the people who:</div>
 <div class="criteria_list">
