--- a/mycelium/apps/reports/templates/reports/detail_donors.html
+++ b/mycelium/apps/reports/templates/reports/detail_donors.html
@@ -6,7 +6,7 @@
 <div class="right_actions">
 	<a href="#" class="mycelium_btn mycelium_grey">Saved</a>
 </div>
-<div class="title"><img src="{{MEDIA_URL}}images/report-32.png"/>2010 Monthly Donors</div>
+<div class="title"><img src="{% media_url "images/report-32.png" %}/>2010 Monthly Donors</div>
 
 <div class="setup_phrase">Find all of the people who:</div>
 <div class="criteria_list">
