skills / roles working

--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -567,15 +567,18 @@ tag.checkbox .checkbox_input {
 tags.checkboxes {
 	padding: 0px 0px 0px 16px;
 }
-tags.checkboxes .new_tag_checkbox input.new_tag_name_input {
-	border: 1px solid #DDD;
-	padding: 0px;
-	margin: 0px;
-	border-width: 0px 0px 1px 0px;
-	padding-bottom: 0px;
-	font-size: 14px;
+tags.checkboxes .new_checkbox_tag input.checkbox_input {
+	margin-bottom: 4px;
 }
-tags.checkboxes .new_tag_checkbox input.new_tag_name_input:focus {
+tags.checkboxes .new_checkbox_tag input.new_tag_name_input {
+	border: 1px solid #BBB;
+	padding: 0px;
+	margin: 0px 0px 0px 4px;
+	border-width: 0px 0px 1px 0px;
+	font-size: 18px;
+	min-width: 100px;
+}
+tags.checkboxes .new_checkbox_tag input.new_tag_name_input:focus {
 	outline-style:none;
 	border: 1px solid #3E9CFD;
 	border-width: 0px 0px 1px 0px;	
