fixed reports syntax problem

--- a/mycelium/apps/reports/templates/reports/detail_volunteer.html
+++ b/mycelium/apps/reports/templates/reports/detail_volunteer.html
@@ -6,7 +6,7 @@
 <div class="right_actions">
 	<a href="#" class="mycelium_btn mycelium_grey">Saved</a>
 </div>
-<div class="title"><img src="{% media_url "images/report-32.png"}/>Thursday Volunteer List</div>
+<div class="title"><img src="{% media_url "images/report-32.png" %}/>Thursday Volunteer List</div>
 <div class="setup_phrase">Find all of the people who:</div>
 <div class="criteria_list">
 	<div class="criterium">
