--- a/mycelium/templates/500.html
+++ b/mycelium/templates/500.html
@@ -3,14 +3,14 @@
 <html lang="en">
 <head>
 	<title>{% trans "500 Error - Unable to load the requested page!"%}</title>
-	<link rel="stylesheet" href="https://media.agoodcloud.com/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
-	<link rel="stylesheet" href="https://media.agoodcloud.com/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8">
+	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
+	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8">
 </head>
 <body>
 	
 	<div id="error_message">
 	<div class="adorable_image">
-	<img src="https://media.agoodcloud.com/images/icon-raincloud-400.png" />
+	<img src="https://goodcloud1.s3.amazonaws.com/images/icon-raincloud-400.png" />
 	</div>
 	<div class="detail_box">
 	<h1>How Embarrassing. We ran into problems loading that page.</h1>
