--- a/mycelium/templates/502.html
+++ b/mycelium/templates/502.html
@@ -3,14 +3,14 @@
 <html lang="en">
 <head>
 	<title>We're upgrading GoodCloud - be right back!</title>
-	<link rel="stylesheet" href="https://media.agoodcloud.com/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
-	<link rel="stylesheet" href="https://media.agoodcloud.com/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8">
+	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
+	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8">
 </head>
 <body class="502">
 	
 	<div id="error_message">
 	<div class="adorable_image">
-	<img src="https://media.agoodcloud.com/images/icon-suncloud-400.png" />
+	<img src="https://goodcloud1.s3.amazonaws.com/images/icon-suncloud-400.png" />
 	</div>
 	<div class="detail_box">
 	<h1>We'll be right back!</h1>
