--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -42,9 +42,10 @@
 	{% block content %}
 
 	{% endblock %}
- {% if ENV != "DEV" and not user.is_staff %}{% analytics %} 
+{% if ENV != "DEV" and not user.is_staff %}
+{% analytics %} 
 {# {% include "owa/_analytics.html" %} #}
-  {% endif %} 
+{% endif %} 
 </body>
 {% endblock %}
 </html>
