reports link moved to more

--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -18,10 +18,16 @@
 	</a>
 	</div>
 	<div class="more_row">
+	<a href="{% url reports:search %}" class="mycelium_btn more_button reports_btn">
+		<div class="button_title">Reports</div>
+		<div class="button_description">Create and download custom reports</div>
+	</a>
 	<a href="#" class="mycelium_btn more_button users_button">
 		<div class="button_title">Users</div>
 		<div class="button_description">Create, edit, and set access for user accounts</div>
 	</a>
+	</div>
+	<div class="more_row">
 	<a href="{% url logo_maker:list_logos %}" class="mycelium_btn more_button logo_button">
 		<div class="button_title">Logos</div>
 		<div class="button_description">Download resized versions of your logo for other sites</div>
