--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -25,7 +25,7 @@
 		<a href="#">Volunteers</a>
 		<a href="#">Donors</a>
 		{# <a href="#">Fund</a> #}
-		<a href="{% url reports:search %}" class="{% if section == "reports" %}current{% endif %}" >Reports</a>
+		{# <a href="{% url reports:search %}" class="{% if section == "reports" %}current{% endif %}" >Reports</a> #}
 		<a href="#">Communicate</a>
 		{# <a href="#">Events</a> #}
 		<a href="{% url core:more_menu %}" class="{% if section == "more" %}current{% endif %}">More</a>
