--- a/media/css/more.css
+++ b/media/css/more.css
@@ -48,6 +48,10 @@ body {
 .account_button {
 	background-image: url("../images/icon-account-100.png");
 }
+.reports_btn {
+	background-image: url("../images/icon-report-76.png");
+	background-position: 40px 10px;	
+}
 .more_row {
 	clear: left;
 	width: 100%;
