fixed inclusion of trans in 404 and 500

--- a/mycelium/templates/404.html
+++ b/mycelium/templates/404.html
@@ -2,7 +2,7 @@
    "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
-	<title>{% trans "404 Error - That page doesn't exist!"%}</title>
+	<title>404 Error - That page doesn't exist!</title>
 	{% css "/css/main.css" %}
 	{% css "/css/error_pages.css" %}
 </head>
