--- a/mycelium/templates/500.html
+++ b/mycelium/templates/500.html
@@ -2,7 +2,7 @@
    "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
-	<title>{% trans "500 Error - Unable to load the requested page!"%}</title>
+	<title>500 Error - Unable to load the requested page!</title>
 	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
 	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8">
 </head>
