--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -15,8 +15,8 @@
 	<span class="new_label">New:</span>
 	<a href="{% url people:new_person %}" class="new_person_btn mycelium_btn mycelium_new_btn">Person</a>
 	<a href="{% url people:new_organization %}" class="new_organization_btn mycelium_btn mycelium_new_btn">Organization</a>
-	<a href="#" class="new_group_btn mycelium_btn mycelium_new_btn">Group</a>
-	<a href="#" class="new_smart_group_btn mycelium_btn mycelium_new_btn">Smart Group</a>
+	<a href="{% url groups:new_group %}" class="new_group_btn mycelium_btn mycelium_new_btn">Group</a>
+	<a href="{% url groups:new_smart_group %}" class="new_smart_group_btn mycelium_btn mycelium_new_btn">Smart Group</a>
 </new_object_buttons>
 <search_results><fragment name="main_search_results" action="replace">
 	{% include "people/_search_results.html" %}
