--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -11,6 +11,7 @@
 {% js "/js/contrib/jquery.autogrow.js" %}
 {% js "/js/contrib/jquery.form.js" %}
 {% js "/js/contrib/jquery.ba-bbq.min.js" %}
+{% js "/js/contrib/autocolumn.min.js" %}
 {% js "/js/mycelium/mycelium_elements.js" %}
 {% js "/js/mycelium/mycelium_search.js" %}
 {% endblock %}
