tags working, look ok

--- a/media/css/people_groups.css
+++ b/media/css/people_groups.css
@@ -1,4 +1,4 @@
-tab_contents.people_groups_tab  .groups_list two_columns tags {
+tab_contents.people_groups_tab .groups_list tags fragment {
 	display: block;
 
 /*	-webkit-column-count: 3;
@@ -15,7 +15,11 @@ tab_contents.people_groups_tab  .groups_list two_columns tags {
 */
 
 }
+tab_contents.people_groups_tab  .groups_list .detail_header {
+	width: 96%;
+}
 
-tab_contents.people_group_tab  .groups_list .checkbox {
-/*	width: 30%;*/
+
+tag.new_checkbox_tag {
+	padding-top: 5px;
 }
