--- a/mycelium/apps/groups/templates/groups/_people_group_tab.html
+++ b/mycelium/apps/groups/templates/groups/_people_group_tab.html
@@ -8,10 +8,11 @@
 </div>
 </td>
 <td class="column_2 smart_groups_list">
-<div class="tags_and_other_info">
+<div class="smart_groups">
 	<div class="detail_header">Smart Groups</div>
 	<div class="section_details">
-	
+		<div class="tab_content_coming_soon">Coming soon!</div>
+		<div class="explanation">Smart Groups are coming next week, and will allow you to group people automatically by criteria.</div>
 	</div>
 </div>
 </td>
