--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -94,10 +94,10 @@ $(function(){
 
 <detail_tabs update_url="{% url people:tab_contents person.pk %}">
 	<a class="detail_tab current" href="#recent_activity">Recent Activity</a>
-	<a class="detail_tab" href="#groups">Groups</a>
+	<a class="detail_tab" href="#conversations">Conversations</a>	
 	<a class="detail_tab" href="#volunteer">Volunteer</a>
-	<a class="detail_tab" href="#donor">Donor</a>
-	{# <a class="detail_tab" href="#conversations">Conversations</a>	 #}
+	<a class="detail_tab" href="#donor">Donations</a>
+	<a class="detail_tab" href="#groups">Tags</a>
 </detail_tabs>
 <detail_tab_contents>
 	<fragment name="detail_tab" action="replace">
