--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -60,7 +60,7 @@ $(function(){
 </div>
 	
 <div class="general_organization_tags">
-	{% render_tags_and_add_tag org tag_view_obj %}
+{# 	{% render_tags_and_add_tag org tag_view_obj %} #}
 </div>
 
 	
