--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -97,7 +97,7 @@ $(function(){
 	<a class="detail_tab" href="#conversations">Conversations</a>	
 	<a class="detail_tab" href="#volunteer">Volunteer</a>
 	<a class="detail_tab" href="#donor">Donations</a>
-	<a class="detail_tab" href="#groups">Tags</a>
+	<a class="detail_tab" href="#tags">Tags</a>
 </detail_tabs>
 <detail_tab_contents>
 	<fragment name="detail_tab" action="replace">
