--- a/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
+++ b/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
@@ -78,7 +78,7 @@
 
 	<div class="detail_header">Skills/Roles</div>
 	<span class="skills_tags">
-		{% render_tags_as_checklist person.volunteer tag_view_obj  %}
+{# 		{% render_tags_as_checklist person.volunteer tag_view_obj  %} #}
 	</span>
 </div>
 </td>
