--- a/mycelium/apps/groups/templates/groups/_people_group_tab.html
+++ b/mycelium/apps/groups/templates/groups/_people_group_tab.html
@@ -4,7 +4,7 @@
 <tr>
 <td class="column_1 groups_list">
 <div class="detail_header">Groups</div>
-	{% render_tags_as_checklist person tag_view_obj %}
+	{# {% render_tags_as_checklist person tag_view_obj %} #}
 </div>
 </td>
 <td class="column_2 smart_groups_list">
