adding and removing tags works

--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -6,11 +6,13 @@
 {% css "/css/people_volunteer.css" %}
 {% css "/css/people_donor.css" %}
 {% css "/css/people_groups.css" %}
+{% css "/css/people_tags.css" %}
 {% endblock %}
 {% block javascript %}{{block.super}}
 {% js "/js/mycelium/people_volunteer.js" %}
 {% js "/js/mycelium/people_donations.js" %}
 {% js "/js/mycelium/people_groups.js" %}
+{% js "/js/mycelium/people_tags.js" %}
 {% js "/js/mycelium/people_common.js" %}
 {% js "/js/mycelium/people_person.js" %}
 {% generic_tags_js %}
