--- a/mycelium/apps/generic_tags/templates/generic_tags/_tag_checklist.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_tag_checklist.html
@@ -1,3 +1,3 @@
-{% for checklist_tag in obj_tags.all_of_my_type_with_obj_tags %}
+{% for checklist_tag in target_tags %}
 {% include "generic_tags/_checklist_tag.html" %}
 {% endfor %}
