--- a/mycelium/apps/generic_tags/templates/generic_tags/_tags_and_add_tag.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_tags_and_add_tag.html
@@ -4,7 +4,7 @@
 </fragment>
 <form action="{{add_tag_url}}" method="POST" id="new_{{tag_set_name}}_tag_form" class="new_tag_form" >{% csrf_token %}
 <tag class="new_tag">
-	<input type="hidden" name="target_pk" value="{{obj.pk}}">
+	<input type="hidden" name="target_pk" value="{{target.pk}}">
 	<input type="text" name="new_tag" value="" placeholder="Type a new tag" maxlength="100" autocomplete="off" results_url="{{search_results_url}}">
 	<input type="submit" class="mycelium_btn mycelium_small_btn tag_add_btn" value="Add">
 </tag>
