--- a/mycelium/apps/generic_tags/templates/generic_tags/_tags_as_checklist.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_tags_as_checklist.html
@@ -4,7 +4,7 @@
 </fragment>
 <form action="{{add_tag_url}}" method="POST" id="new_{{tag_set_name}}_tag_form" class="new_tag_form" >{% csrf_token %}
 <tag class="new_checkbox_tag">
-	<input type="hidden" name="target_pk" value="{{obj.pk}}">
+	<input type="hidden" name="target_pk" value="{{target.pk}}">
 	<input type="checkbox" class="checkbox_input" id="{{tag_set_name}}_new" />
 	<input type="text" name="new_tag" value="" placeholder="{{new_tag_placeholder}}" maxlength="100" autocomplete="off" results="0" results_url="{{search_results_url}}" class="new_tag_name_input">
 	<input type="submit" class="mycelium_btn mycelium_small_btn tag_add_btn" value="Add">
