--- a/mycelium/apps/generic_tags/templates/generic_tags/_people_tag_tab.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_people_tag_tab.html
@@ -1,15 +1,14 @@
 {% load i18n generic_fields friendly_data_formatting humanize generic_tag_tags %}
 <tab_contents class="people_tags_tab">
 
-<table class="tags_table">
-<tr>
 {% for tsm in person.tagsets %}
-<td>
-	{{tsm.name}}
+<column>
+	<div class="detail_header">{{tsm.name}}</div>	
 	<div class="tags_list">
 	{% render_tags_as_checklist person tsm.name %}
 	</div>
-</td>
+</column>
+{% if forloop.counter|divisibleby:3 and not forloop.last %}<clear class="clearfix"></clear>{% endif %}
 {% endfor %}
-</tr></table>
+
 </tab_contents>
