--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -102,7 +102,7 @@ $(function(){
 	<a class="detail_tab" href="#tags">Tags</a>
 </detail_tabs>
 <detail_tab_contents>
-	<fragment name="detail_tab" action="replace">
+	<fragment name="detail_tab" action="replace" class="detail_tab">
 		{% include "recent_activity/_people_recent_activity_tab.html" %}
 	</fragment>
 </detail_tab_contents>
