--- a/media/css/people_tags.css
+++ b/media/css/people_tags.css
@@ -1,10 +1,6 @@
 tab_contents.people_tags_tab .tags_list tags fragment {
 	display: block;
 }
-tab_contents.people_tags_tab  .tags_list .detail_header {
-	width: 96%;
-}
-
 tab_contents.people_tags_tab tag.new_checkbox_tag {
 	padding-top: 5px;
 }
@@ -16,4 +12,10 @@ tab_contents.people_tags_tab tag.checkbox.checked {
 /*	background-color: #000486;
 	color: #FFF;
 */
+}
+tab_contents.people_tags_tab column {
+	width: 33%;
+}
+tab_contents.people_tags_tab column .detail_header {
+	width: 92%;
 }
